# semquant

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
configs/: default.yaml
docs/demo/: summary.json
examples/: generate_synthetic.py
scripts/: batch_example.sh
semquant/: __init__.py  cli.py  defaults.py  io.py  measurements.py  pipeline.py  plotting.py  preprocess.py  report.py  scale.py  segmentation.py  utils.py
semquant/configs/: __init__.py
tests/: test_synthetic_fibers.py  test_synthetic_particles.py  test_synthetic_pores.py
